--- a/quickstarts/defaultcamelcontext/pom.xml
+++ b/quickstarts/defaultcamelcontext/pom.xml
@@ -31,7 +31,7 @@
         <camel.osgi.bundle.name>${project.name}</camel.osgi.bundle.name>
 
         <!-- Main Class to Boot -->
-        <example.main.class>org.apache.camel.cdi.example2.BootStrap</example.main.class>
+        <example.main.class>org.apache.camel.cdi.example2.Main</example.main.class>
     </properties>
 
     <dependencies>
