--- a/envs/karaf/itest/pom.xml
+++ b/envs/karaf/itest/pom.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+
     <parent>
-        <artifactId>karaf</artifactId>
         <groupId>io.astefanutti.camel.cdi</groupId>
+        <artifactId>karaf</artifactId>
         <version>1.2-SNAPSHOT</version>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
 
     <artifactId>itest</artifactId>
     <name>Camel CDI :: Environments :: Karaf Tests</name>
@@ -13,14 +14,13 @@
     <properties>
         <gravia.version>1.1.0.Beta43</gravia.version>
         <karaf.version>3.0.2</karaf.version>
-        <!--<karaf.version>2.3.3</karaf.version>-->
         <karaf-tooling.version>2.3.9</karaf-tooling.version>
         <pax-exam.version>4.3.0</pax-exam.version>
-
         <karaf.home>${project.build.directory}/apache-karaf-${karaf.version}</karaf.home>
     </properties>
 
     <dependencies>
+
         <!-- Pax Exam -->
         <dependency>
             <groupId>org.ops4j.pax.exam</groupId>
@@ -44,11 +44,6 @@
             <groupId>org.ops4j.pax.exam</groupId>
             <artifactId>pax-exam-container-karaf</artifactId>
             <version>${pax-exam.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
 
@@ -113,6 +108,15 @@
             <version>4.0.0.CR1</version>
             <scope>test</scope>
         </dependency>
+
+        <!-- Examples -->
+        <dependency>
+            <groupId>io.astefanutti.camel.cdi</groupId>
+            <artifactId>simplecontextname</artifactId>
+            <version>${project.version}</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -191,7 +195,6 @@
                 <configuration>
                     <excludes>
                         <exclude>**/CdiArquillianKarafTest.java</exclude>
-                        <exclude>**/CdiPaxExamKarafTest.java</exclude>
                     </excludes>
                 </configuration>
             </plugin>
