Rename OSGi environment test module

--- a/envs/pom.xml
+++ b/envs/pom.xml
@@ -15,7 +15,7 @@
     <modules>
         <module>ee</module>
         <module>se</module>
-        <module>karaf</module>
+        <module>osgi</module>
     </modules>
 
     <profiles>
