--- a/envs/osgi/pom.xml
+++ b/envs/osgi/pom.xml
@@ -8,8 +8,8 @@
         <version>1.2-SNAPSHOT</version>
     </parent>
 
-    <artifactId>camel-cdi-karaf</artifactId>
-    <name>Camel CDI :: Environments :: Karaf Tests</name>
+    <artifactId>camel-cdi-osgi</artifactId>
+    <name>Camel CDI :: Environments :: OSGi</name>
 
     <properties>
         <gravia.version>1.1.0.Beta43</gravia.version>
