Upgrade to PAX CDI version 1.0.0.RC1

--- a/pom.xml
+++ b/pom.xml
@@ -76,7 +76,7 @@
         <!-- Maven dependencies -->
         <camel.version>2.16.1</camel.version>
         <cdi.version>1.2</cdi.version>
-        <pax-cdi.version>0.8.0</pax-cdi.version>
+        <pax-cdi.version>1.0.0.RC1</pax-cdi.version>
         <deltaspike.version>1.5.1</deltaspike.version>
         <javaee.version>7.0</javaee.version>
         <slf4j.version>1.7.12</slf4j.version>
