Add SJMS sample

--- a/samples/pom.xml
+++ b/samples/pom.xml
@@ -19,6 +19,7 @@
     <modules>
         <module>hello</module>
         <module>properties</module>
+        <module>sjms</module>
     </modules>
 
     <build>
