--- a/samples/pom.xml
+++ b/samples/pom.xml
@@ -24,7 +24,7 @@
 
     <build>
         <plugins>
-            <!-- Java SE - Maven Exec Plugin - Standalone using main class of the JAR -->
+            <!-- Java SE - Maven Exec Plugin -->
             <!-- TODO: the Exec Maven plugin exec goal parent process does not wait for the child process to exit when the JVM terminates in response to a user interrupt, such as typing ^C. That leads to the child process logs not being streamed back to the parent process stream handler. See https://github.com/mojohaus/exec-maven-plugin/issues/9 -->
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
@@ -40,13 +40,23 @@
                 </configuration>
             </plugin>
 
-            <!-- Java SE - Camel Maven Plugin - Standalone using DeltaSpike container control -->
+            <!-- Java SE - Camel Maven Plugin -->
             <plugin>
                 <groupId>io.astefanutti.camel.cdi</groupId>
                 <artifactId>camel-maven-plugin</artifactId>
                 <version>${project.version}</version>
                 <configuration>
                     <useCDI>true</useCDI>
+                </configuration>
+            </plugin>
+
+            <!-- Java SE - HawtIO Maven Plugin -->
+            <plugin>
+                <groupId>io.hawt</groupId>
+                <artifactId>hawtio-maven-plugin</artifactId>
+                <configuration>
+                    <mainClass>org.apache.camel.cdi.Main</mainClass>
+                    <openWebConsoleDelay>5</openWebConsoleDelay>
                 </configuration>
             </plugin>
         </plugins>
