--- a/pom.xml
+++ b/pom.xml
@@ -73,7 +73,6 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <!-- Maven dependencies -->
         <camel.version>2.16.1</camel.version>
         <cdi.version>1.2</cdi.version>
         <pax-cdi.version>1.0.0.RC1</pax-cdi.version>
@@ -91,11 +90,6 @@
         <arquillian.weld.version>1.0.0.CR9</arquillian.weld.version>
         <shrinkwrap.resolver.version>2.2.0</shrinkwrap.resolver.version>
         <shrinkwrap.descriptors.version>2.0.0-alpha-8</shrinkwrap.descriptors.version>
-        <!-- Maven plugins -->
-        <maven-exec-plugin-version>1.4.0</maven-exec-plugin-version>
-        <maven-bundle-plugin.version>2.3.7</maven-bundle-plugin.version>
-        <maven-wildfly-plugin.version>1.0.2.Final</maven-wildfly-plugin.version>
-        <maven-jetty-plugin.version>9.3.0.M1</maven-jetty-plugin.version>
     </properties>
 
     <modules>
@@ -113,7 +107,7 @@
                 <plugin>
                     <groupId>org.codehaus.mojo</groupId>
                     <artifactId>exec-maven-plugin</artifactId>
-                    <version>${maven-exec-plugin-version}</version>
+                    <version>1.4.0</version>
                 </plugin>
 
                 <plugin>
@@ -129,9 +123,22 @@
                 </plugin>
 
                 <plugin>
+                    <groupId>org.apache.servicemix.tooling</groupId>
+                    <artifactId>depends-maven-plugin</artifactId>
+                    <version>1.3.1</version>
+                </plugin>
+
+                <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>3.3</version>
+                </plugin>
+
+                <plugin>
+                    <groupId>org.apache.felix</groupId>
+                    <artifactId>maven-bundle-plugin</artifactId>
+                    <version>2.3.7</version>
+                    <extensions>true</extensions>
                 </plugin>
 
                 <plugin>
@@ -282,7 +289,7 @@
             <dependency>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
-                <version>${maven-exec-plugin-version}</version>
+                <version>1.4.0</version>
             </dependency>
 
             <!-- test dependencies -->
