Log verifier JUnit rule

--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,7 @@
         <module>maven</module>
         <module>samples</module>
         <module>envs</module>
+        <module>test</module>
     </modules>
 
     <build>
