--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ install:
   - mvn clean install -Dmaven.test.skip.exec
 
 script:
-  - mvn test -Pjacoco -Pweld
+  - mvn test -Pjacoco -Pweld -Pstandalone
   - mvn test -Pjacoco -Powb -pl envs/se
   - mvn test -Pjacoco -Pwildfly-8.x -pl envs/ee
   - mvn test -Pjacoco -Pwildfly-9.x -pl envs/ee
