--- a/envs/osgi/pom.xml
+++ b/envs/osgi/pom.xml
@@ -60,7 +60,7 @@
         <dependency>
             <groupId>org.apache.activemq</groupId>
             <artifactId>activemq-karaf</artifactId>
-            <version>5.12.1</version>
+            <version>${activemq.version}</version>
             <classifier>features</classifier>
             <type>xml</type>
             <scope>test</scope>
