--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,7 @@
         <arquillian.weld.version>1.0.0.CR9</arquillian.weld.version>
         <shrinkwrap.resolver.version>2.2.0</shrinkwrap.resolver.version>
         <shrinkwrap.descriptors.version>2.0.0-alpha-8</shrinkwrap.descriptors.version>
+        <activemq.version>5.12.1</activemq.version>
     </properties>
 
     <modules>
