--- a/samples/hello/pom.xml
+++ b/samples/hello/pom.xml
@@ -21,6 +21,7 @@
         <dependency>
             <groupId>org.apache.camel</groupId>
             <artifactId>camel-core</artifactId>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
@@ -29,6 +30,7 @@
             <version>${project.version}</version>
             <!-- That example only depends on Camel and CDI API -->
             <scope>runtime</scope>
+            <optional>true</optional>
         </dependency>
     </dependencies>
 </project>
