--- a/samples/pom.xml
+++ b/samples/pom.xml
@@ -76,6 +76,7 @@
                     <groupId>javax</groupId>
                     <artifactId>javaee-api</artifactId>
                     <scope>runtime</scope>
+                    <optional>true</optional>
                 </dependency>
 
                 <!-- Logging -->
@@ -83,12 +84,14 @@
                     <groupId>org.apache.logging.log4j</groupId>
                     <artifactId>log4j-slf4j-impl</artifactId>
                     <scope>runtime</scope>
+                    <optional>true</optional>
                 </dependency>
 
                 <dependency>
                     <groupId>org.apache.logging.log4j</groupId>
                     <artifactId>log4j-core</artifactId>
                     <scope>runtime</scope>
+                    <optional>true</optional>
                 </dependency>
 
             </dependencies>
@@ -113,24 +116,28 @@
                     <groupId>org.apache.deltaspike.cdictrl</groupId>
                     <artifactId>deltaspike-cdictrl-weld</artifactId>
                     <scope>runtime</scope>
+                    <optional>true</optional>
                 </dependency>
 
                 <dependency>
                     <groupId>org.jboss.weld.se</groupId>
                     <artifactId>weld-se-core</artifactId>
                     <scope>runtime</scope>
+                    <optional>true</optional>
                 </dependency>
 
                 <dependency>
                     <groupId>org.jboss.weld</groupId>
                     <artifactId>weld-core-impl</artifactId>
                     <scope>runtime</scope>
+                    <optional>true</optional>
                 </dependency>
 
                 <!-- test dependencies -->
                 <dependency>
                     <groupId>org.jboss.arquillian.container</groupId>
                     <artifactId>arquillian-weld-se-embedded-1.1</artifactId>
+                    <optional>true</optional>
                 </dependency>
             </dependencies>
         </profile>
@@ -146,24 +153,28 @@
                     <groupId>org.apache.deltaspike.cdictrl</groupId>
                     <artifactId>deltaspike-cdictrl-owb</artifactId>
                     <scope>runtime</scope>
+                    <optional>true</optional>
                 </dependency>
 
                 <dependency>
                     <groupId>org.apache.openwebbeans</groupId>
                     <artifactId>openwebbeans-impl</artifactId>
                     <scope>runtime</scope>
+                    <optional>true</optional>
                 </dependency>
 
                 <dependency>
                     <groupId>org.slf4j</groupId>
                     <artifactId>jul-to-slf4j</artifactId>
                     <scope>runtime</scope>
+                    <optional>true</optional>
                 </dependency>
 
                 <!-- test dependencies -->
                 <dependency>
                     <groupId>org.apache.openwebbeans.arquillian</groupId>
                     <artifactId>owb-arquillian-standalone</artifactId>
+                    <optional>true</optional>
                 </dependency>
             </dependencies>
         </profile>
