--- a/samples/sjms/pom.xml
+++ b/samples/sjms/pom.xml
@@ -22,6 +22,7 @@
             <groupId>io.astefanutti.camel.cdi</groupId>
             <artifactId>camel-cdi</artifactId>
             <version>${project.version}</version>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
@@ -32,14 +33,16 @@
 
         <dependency>
             <groupId>org.apache.activemq</groupId>
-            <artifactId>activemq-broker</artifactId>
+            <artifactId>activemq-client</artifactId>
             <version>${activemq.version}</version>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
             <groupId>org.apache.activemq</groupId>
-            <artifactId>activemq-client</artifactId>
+            <artifactId>activemq-broker</artifactId>
             <version>${activemq.version}</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 </project>
