--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -80,12 +80,14 @@
             <groupId>org.apache.deltaspike.cdictrl</groupId>
             <artifactId>deltaspike-cdictrl-weld</artifactId>
             <scope>test</scope>
+            <optional>true</optional>
         </dependency>
 
         <dependency>
             <groupId>org.jboss.weld.se</groupId>
             <artifactId>weld-se-core</artifactId>
             <scope>test</scope>
+            <optional>true</optional>
         </dependency>
 
     </dependencies>
